@@ -242,6 +242,8 @@ L<Paws::ApplicationAutoScaling>
 
 L<Paws::AppStream>
 
+L<Paws::Athena>
+
 L<Paws::AutoScaling>
 
 L<Paws::Batch>
@@ -726,7 +728,7 @@ Dakkar for solving issues with parameter passing
 
 Arthur Axel fREW Schmidt for speeding up credential refreshing
 
-PopeFelix for solving issues around S3
+PopeFelix for solving issues around S3 and MojoAsyncCaller
 
 meis for contributing Paws::Credential::Explicit
 
