@@ -2,11 +2,13 @@
  - New Credential provider: Paws::Credential::Explicit for providing in-code credentials (meis)
  - Bug fixed: ETag not defined when using MojoAsyncCaller (PopeFelix)
  - New API: MarketplaceEntitlement
+ - New API: Athena
  - API update: AppStream
  - API update: CloudFormation
  - API update: CloudWatchEvents
  - API update: CodeDeploy
  - API update: DeviceFarm
+ - API update: DMS
  - API update: ECS
  - API update: ELB
  - API update: ELBv2
@@ -14,11 +16,15 @@
  - API update: Inspector
  - API update: Lambda
  - API update: LexModels
+ - API update: Lightsail
  - API update: Organizations
+ - API update: Rekognition
+ - API update: ResourceTagging
  - API update: RDS
  - API update: Snowball
  - API update: SQS
  - API update: SSM
+ - API update: StorageGateway
 
 0.32 20 Apr 2017
  - Speed up Credential Refreshing (Arthur Axel fREW Schmidt)
